--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
     # Generate HTML report
       - run: npm run report:merge
       - run: npm run report:mocha
+      
 
     # Publicar relatório em HTML
       - name: Deploy to GitHub Pages
@@ -54,3 +55,4 @@ jobs:
           BRANCH: gh-pages
           FOLDER: mochawesome-report
       
+      - run: npm run report:clean
